# metronome

./: .gitignore  Metronome.desktop  README.md  main.pd  main.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  slide.h
.config/: settings.json
.config/pd/: hihat.pd  sine.pd
pd/: main.pd
share/: 2op.pd  hihat.pd  settings.json  sine.pd
share/pd/: rad.pd
